# Tirumala-Plus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: backfill.yml  ci.yml  daily-etl.yml
src/tirumala_pulse/: .env.example  CHANGELOG.md  main.py  test_logger.py
src/tirumala_pulse/api/: ttd_api.py
src/tirumala_pulse/config/: constants.py  settings.py
src/tirumala_pulse/database/: connection.py
src/tirumala_pulse/models/: checkpoint.py  checkpoint_status.py  daily_statistics.py  etl_run.py  process_result.py  process_status.py  raw_report.py
src/tirumala_pulse/parsers/: statistics_parser.py
src/tirumala_pulse/repositories/: checkpoint_repository.py  daily_statistics_repository.py  etl_run_repository.py  raw_report_repository.py
src/tirumala_pulse/scraper/: scraper.py
src/tirumala_pulse/services/: backfill_service.py  etl_service.py  process_post_service.py
src/tirumala_pulse/utils/: logger.py
tests/: test_logger.py
